<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_background"
    tools:context=".ui.fragment.LoginFragment">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/logo" />

    <EditText
        android:id="@+id/Login_Fragment_Phone_edit_text"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edit_text_boarder"
        android:ems="10"
        android:fontFamily="@font/cairo_light"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:padding="8dp"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/Login_Fragment_Password_edit_text"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edit_text_boarder"
        android:ems="10"
        android:fontFamily="@font/cairo_light"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login_Fragment_Phone_edit_text" />

    <CheckBox
        android:id="@+id/Login_Fragment_Remember_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="@+id/Login_Fragment_Password_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/Login_Fragment_Password_edit_text" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/cairo_semibold"
        android:text="@string/remember_me"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/Login_Fragment_Remember_check_box"
        app:layout_constraintTop_toBottomOf="@+id/Login_Fragment_Password_edit_text" />

    <Button
        android:id="@+id/Login_Fragment_Login_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/cairo_bold"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/Login_Fragment_SignUp_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/cairo_bold"
        android:text="@string/create_new_account"
        app:layout_constraintEnd_toEndOf="@+id/Login_Fragment_Login_btn"
        app:layout_constraintStart_toStartOf="@+id/Login_Fragment_Login_btn"
        app:layout_constraintTop_toBottomOf="@+id/Login_Fragment_Login_btn" />

    <TextView
        android:id="@+id/Login_Fragment_Forget_Password_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:drawableEnd="@drawable/ic_warning"
        android:drawablePadding="4dp"
        android:fontFamily="@font/cairo_semibold"
        android:text="@string/forget_password"
        app:layout_constraintStart_toStartOf="@+id/Login_Fragment_Password_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/Login_Fragment_Password_edit_text" />

</androidx.constraintlayout.widget.ConstraintLayout>