<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/splash_background"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo"
        android:contentDescription="@string/logo" />

    <TextView
        android:id="@+id/Forget_Password_Text_View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:fontFamily="@font/cairo_bold"
        android:textSize="@dimen/size_18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        android:text="@string/change_password_code" />

    <EditText
        android:id="@+id/Change_Password_New_Password_edit_text"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="@dimen/dimen_50dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:background="@drawable/edit_text_boarder_with_radius"
        android:ems="10"
        android:hint="@string/new_password"
        android:inputType="phone"
        android:padding="@dimen/dimen_8dp"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="@+id/Change_Password_Verify_Code_edit_text"
        app:layout_constraintStart_toStartOf="@+id/Change_Password_Verify_Code_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/Change_Password_Verify_Code_edit_text"
        tools:ignore="Autofill,TextFields" />

    <EditText
        android:id="@+id/Change_Password_Re_New_Password_edit_text"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="@dimen/dimen_50dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:background="@drawable/edit_text_boarder_with_radius"
        android:ems="10"
        android:hint="@string/retry_new_password"
        android:inputType="phone"
        android:padding="@dimen/dimen_8dp"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="@+id/Change_Password_New_Password_edit_text"
        app:layout_constraintStart_toStartOf="@+id/Change_Password_New_Password_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/Change_Password_New_Password_edit_text"
        tools:ignore="Autofill,TextFields" />

    <EditText
        android:id="@+id/Change_Password_Verify_Code_edit_text"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="@dimen/dimen_50dp"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:background="@drawable/edit_text_boarder_with_radius"
        android:ems="10"
        android:hint="@string/verifying_code"
        android:inputType="phone"
        android:padding="@dimen/dimen_8dp"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Forget_Password_Text_View"
        tools:ignore="Autofill,TextFields" />

    <Button
        android:id="@+id/Change_Password_Send_button"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="@dimen/dimen_50dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:background="@color/lightGreen"
        android:fontFamily="@font/cairo_semibold"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="@dimen/size_18sp"
        app:layout_constraintEnd_toEndOf="@+id/Change_Password_Re_New_Password_edit_text"
        app:layout_constraintStart_toStartOf="@+id/Change_Password_Re_New_Password_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/Change_Password_Re_New_Password_edit_text"
        android:text="@string/change_password_button" />
</androidx.constraintlayout.widget.ConstraintLayout>