<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/splash_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/Forget_Password_Image_View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo"
        android:contentDescription="@string/logo" />

    <TextView
        android:id="@+id/Forget_Password_Text_View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:fontFamily="@font/cairo_bold"
        android:textSize="@dimen/size_18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Forget_Password_Image_View"
        android:text="@string/forget_password_screen" />

    <EditText
        android:id="@+id/Forget_Password_Phone_Number_edit_text"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="@dimen/dimen_50dp"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:background="@drawable/edit_text_boarder"
        android:ems="10"
        android:hint="@string/phone_number2"
        android:inputType="phone"
        android:padding="@dimen/dimen_8dp"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Forget_Password_Text_View" />

    <Button
        android:id="@+id/Forget_Password_Send_button"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="@dimen/dimen_50dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:background="@color/lightGreen"
        android:fontFamily="@font/cairo_semibold"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="@dimen/size_18sp"
        app:layout_constraintEnd_toEndOf="@+id/Forget_Password_Phone_Number_edit_text"
        app:layout_constraintStart_toStartOf="@+id/Forget_Password_Phone_Number_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/Forget_Password_Phone_Number_edit_text"
        android:text="@string/send" />
</androidx.constraintlayout.widget.ConstraintLayout>