<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_background"
    tools:context=".ui.fragment.LoginFragment">

    <ProgressBar
        android:id="@+id/Login_Fragment_ProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:translationZ="2dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/Login_Fragment_Password_Edit_Text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login_Fragment_Password_Edit_Text" />

    <ImageView
        android:id="@+id/Login_Fragment_Logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_64dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Login_Fragment_Phone_Edit_Text"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="@dimen/dimen_50dp"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_32dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:background="@drawable/edit_text_boarder"
        android:ems="10"
        android:fontFamily="@font/cairo_light"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:padding="@dimen/dimen_8dp"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login_Fragment_Logo"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/Login_Fragment_Password_Edit_Text"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="@dimen/dimen_50dp"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:background="@drawable/edit_text_boarder"
        android:ems="10"
        android:fontFamily="@font/cairo_light"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="@dimen/dimen_8dp"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login_Fragment_Phone_Edit_Text"
        tools:ignore="Autofill" />

    <CheckBox
        android:id="@+id/Login_Fragment_Remember_Check_Box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:layout_marginEnd="@dimen/dimen_8dp"
        app:layout_constraintEnd_toEndOf="@+id/Login_Fragment_Password_Edit_Text"
        app:layout_constraintTop_toBottomOf="@+id/Login_Fragment_Password_Edit_Text" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:layout_marginEnd="@dimen/dimen_8dp"
        android:fontFamily="@font/cairo_semibold"
        android:text="@string/remember_me"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/Login_Fragment_Remember_Check_Box"
        app:layout_constraintTop_toBottomOf="@+id/Login_Fragment_Password_Edit_Text" />

    <Button
        android:id="@+id/Login_Fragment_Login_Btn"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:background="@color/lightGreen"
        android:fontFamily="@font/cairo_bold"
        android:text="@string/login"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/Login_Fragment_SignUp_Btn"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:background="@color/colorAccent"
        android:fontFamily="@font/cairo_bold"
        android:text="@string/create_new_account"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/Login_Fragment_Login_Btn"
        app:layout_constraintStart_toStartOf="@+id/Login_Fragment_Login_Btn"
        app:layout_constraintTop_toBottomOf="@+id/Login_Fragment_Login_Btn" />

    <TextView
        android:id="@+id/Login_Fragment_Forget_Password_Text_View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_8dp"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:drawableEnd="@drawable/ic_warning"
        android:drawablePadding="@dimen/dimen_4dp"
        android:fontFamily="@font/cairo_semibold"
        android:text="@string/forget_password"
        app:layout_constraintStart_toStartOf="@+id/Login_Fragment_Password_Edit_Text"
        app:layout_constraintTop_toBottomOf="@+id/Login_Fragment_Password_Edit_Text" />

</androidx.constraintlayout.widget.ConstraintLayout>